--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -210,7 +210,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline12" />
 
     <View
-        android:id="@+id/nuova"
+        android:id="@+id/bnuovo1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
@@ -222,7 +222,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <View
-        android:id="@+id/nuova2"
+        android:id="@+id/bvedi1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
@@ -232,7 +232,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline14" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/bvedi2"
         android:layout_width="92dp"
         android:layout_height="96dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
@@ -242,12 +242,12 @@
         app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/bnuovo2"
         android:layout_width="91dp"
         android:layout_height="97dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toStartOf="@+id/guideline16"
-        app:layout_constraintStart_toStartOf="@+id/nuova"
+        app:layout_constraintStart_toStartOf="@+id/bnuovo1"
         app:layout_constraintTop_toTopOf="@+id/guideline14"
         app:srcCompat="@drawable/ic_baseline_add_24" />
 
@@ -265,7 +265,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
     <View
-        android:id="@+id/view4"
+        android:id="@+id/binfo1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
@@ -275,7 +275,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
     <View
-        android:id="@+id/view6"
+        android:id="@+id/bout1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
@@ -295,7 +295,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/bout2"
         android:layout_width="60dp"
         android:layout_height="63dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
@@ -305,9 +305,10 @@
         app:srcCompat="@drawable/ic_baseline_login_24" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/binfo2"
         android:layout_width="52dp"
         android:layout_height="51dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
