--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -247,18 +247,6 @@
         app:layout_constraintTop_toTopOf="@+id/guideline21" />
 
     <View
-        android:id="@+id/bin1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/rettangolinogrigio2"
-        app:layout_constraintBottom_toTopOf="@+id/guideline27"
-        app:layout_constraintEnd_toStartOf="@+id/guideline37"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline36"
-        app:layout_constraintTop_toTopOf="@+id/guideline21"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <View
         android:id="@+id/viewewew"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -321,7 +309,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline55" />
 
     <EditText
-        android:id="@+id/mcode"
+        android:id="@+id/platenumber"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
