--- a/app/src/main/res/layout/activity_nuova_multa.xml
+++ b/app/src/main/res/layout/activity_nuova_multa.xml
@@ -243,7 +243,7 @@
         app:layout_constraintGuide_percent="0.56" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/lon"
+        android:id="@+id/gertgre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -303,7 +303,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/badge"
         android:layout_width="76dp"
         android:layout_height="64dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline29"
@@ -403,7 +403,7 @@
         android:background="@drawable/rettangolinogrigio2"
         app:layout_constraintBottom_toTopOf="@+id/guideline66"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
-        app:layout_constraintStart_toStartOf="@+id/lon"
+        app:layout_constraintStart_toStartOf="@+id/gertgre"
         app:layout_constraintTop_toTopOf="@+id/guideline65" />
 
     <View
@@ -417,7 +417,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline65" />
 
     <EditText
-        android:id="@+id/platenumber"
+        android:id="@+id/plate"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -456,7 +456,7 @@
         android:layout_height="0dp"
         android:ems="10"
         android:fontFamily="@font/ock"
-        android:hint="Coordinates"
+        android:hint="Latitude"
         android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#2B2B2B"
@@ -468,12 +468,12 @@
         app:layout_constraintTop_toTopOf="@+id/guideline63" />
 
     <EditText
-        android:id="@+id/coordinates2"
+        android:id="@+id/lon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
         android:fontFamily="@font/ock"
-        android:hint="Coordinates"
+        android:hint="Longitude"
         android:inputType="numberDecimal"
         android:textAlignment="center"
         android:textColor="#2B2B2B"
@@ -504,7 +504,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/date2"
+        android:id="@+id/time"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -521,7 +521,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline56" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/photo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:alpha="0.40"
@@ -532,7 +532,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline66"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
-        app:layout_constraintStart_toStartOf="@+id/lon"
+        app:layout_constraintStart_toStartOf="@+id/gertgre"
         app:layout_constraintTop_toTopOf="@+id/guideline65" />
 
     <TextView
@@ -573,7 +573,7 @@
         android:text="Break-ins List"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline59"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
         app:layout_constraintStart_toStartOf="@+id/guideline28"
@@ -614,6 +614,7 @@
         android:name="com.example.multe.EffrazioniFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
