--- a/app/src/main/res/layout/activity_effrazione.xml
+++ b/app/src/main/res/layout/activity_effrazione.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".EffrazioneActivity">
 
     <View
         android:id="@+id/view9"
@@ -26,60 +26,67 @@
         app:layout_constraintGuide_percent="0.15" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline44"
+        android:id="@+id/guideline34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.424" />
+        app:layout_constraintGuide_percent="0.171" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline51"
+        android:id="@+id/guideline35"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.187" />
+        app:layout_constraintGuide_percent="0.247" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline55"
+        android:id="@+id/guideline83"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.22" />
+        app:layout_constraintGuide_percent="0.279" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline52"
+        android:id="@+id/guideline91"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.367" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline56"
+        android:id="@+id/guideline84"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
+        app:layout_constraintGuide_percent="0.459" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline45"
+        android:id="@+id/guideline92"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.500" />
+        app:layout_constraintGuide_percent="0.44" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline47"
+        android:id="@+id/guideline85"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.531" />
+        app:layout_constraintGuide_percent="0.516" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline46"
+        android:id="@+id/guideline86"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.608" />
+        app:layout_constraintGuide_percent="0.592" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline87"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.62" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline33"
@@ -89,32 +96,11 @@
         app:layout_constraintGuide_percent="0.677" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline27"
+        android:id="@+id/guideline88"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.921" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline43"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.87" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.775" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline42"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.82" />
+        app:layout_constraintGuide_percent="0.65" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline29"
@@ -166,32 +152,18 @@
         app:layout_constraintGuide_percent="0.871" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline53"
+        android:id="@+id/guideline89"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.67" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline54"
+        android:id="@+id/guideline90"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline48"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.778" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline50"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.222" />
+        app:layout_constraintGuide_percent="0.75" />
 
     <View
         android:id="@+id/view10"
@@ -236,100 +208,112 @@
         app:srcCompat="@drawable/badge" />
 
     <View
-        android:id="@+id/viewewew"
+        android:id="@+id/bin1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
-        app:layout_constraintBottom_toTopOf="@+id/guideline45"
+        app:layout_constraintBottom_toTopOf="@+id/guideline35"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
         app:layout_constraintStart_toStartOf="@+id/guideline36"
-        app:layout_constraintTop_toTopOf="@+id/guideline44" />
+        app:layout_constraintTop_toTopOf="@+id/guideline34" />
 
     <View
-        android:id="@+id/mcode3"
+        android:id="@+id/bin2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rettangolinogrigio2"
-        app:layout_constraintBottom_toTopOf="@+id/guideline52"
-        app:layout_constraintEnd_toStartOf="@+id/guideline48"
-        app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="@+id/guideline51" />
-
-    <View
-        android:id="@+id/viewewew12"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/rettangolinogrigio2"
-        app:layout_constraintBottom_toTopOf="@+id/guideline46"
+        app:layout_constraintBottom_toTopOf="@+id/guideline84"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline36"
-        app:layout_constraintTop_toTopOf="@+id/guideline47" />
+        app:layout_constraintTop_toTopOf="@+id/guideline83" />
 
-    <TextView
-        android:id="@+id/textView4"
+    <View
+        android:id="@+id/bin3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="@font/ock"
-        android:text="Welcome, please identify yourself"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline56"
-        app:layout_constraintEnd_toStartOf="@+id/guideline53"
-        app:layout_constraintStart_toStartOf="@+id/guideline54"
-        app:layout_constraintTop_toTopOf="@+id/guideline55" />
+        android:background="@drawable/rettangolinogrigio2"
+        app:layout_constraintBottom_toTopOf="@+id/guideline86"
+        app:layout_constraintEnd_toStartOf="@+id/guideline37"
+        app:layout_constraintStart_toStartOf="@+id/guideline36"
+        app:layout_constraintTop_toTopOf="@+id/guideline85" />
 
-    <EditText
-        android:id="@+id/plate"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:fontFamily="@font/ock"
-        android:hint="Matriculation Code"
-        android:inputType="text"
-        android:textAlignment="center"
-        android:textColor="#2B2B2B"
-        android:textColorHint="#B7B7B7"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline45"
-        app:layout_constraintEnd_toStartOf="@+id/guideline48"
-        app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="@+id/guideline44" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline38"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
 
-    <EditText
-        android:id="@+id/pssw"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:ems="10"
-        android:fontFamily="@font/ock"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textAlignment="center"
-        android:textColor="#2B2B2B"
-        android:textColorHint="#B7B7B7"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/guideline46"
-        app:layout_constraintEnd_toStartOf="@+id/guideline48"
-        app:layout_constraintStart_toStartOf="@+id/guideline50"
-        app:layout_constraintTop_toTopOf="@+id/guideline47" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline41"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.78" />
 
     <Button
-        android:id="@+id/bin"
+        android:id="@+id/aggiungi"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:backgroundTint="#DEDEDE"
         android:fontFamily="@font/ock"
-        android:text="Log In"
+        android:text="Add Break-in"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:cornerRadius="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline27"
+        app:layout_constraintBottom_toTopOf="@+id/guideline38"
+        app:layout_constraintEnd_toStartOf="@+id/guideline37"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/guideline36"
+        app:layout_constraintTop_toTopOf="@+id/guideline41" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline88"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
         app:layout_constraintStart_toStartOf="@+id/guideline36"
-        app:layout_constraintTop_toTopOf="@+id/guideline21" />
+        app:layout_constraintTop_toTopOf="@+id/guideline87" />
+
+    <EditText
+        android:id="@+id/importo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:ems="10"
+        android:fontFamily="@font/ock"
+        android:hint="Amount"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        android:textColor="#2B2B2B"
+        android:textColorHint="#B7B7B7"
+        app:layout_constraintBottom_toTopOf="@+id/guideline86"
+        app:layout_constraintEnd_toStartOf="@+id/guideline89"
+        app:layout_constraintStart_toStartOf="@+id/guideline32"
+        app:layout_constraintTop_toTopOf="@+id/guideline85" />
+
+    <Spinner
+        android:id="@+id/tipoeffrazione"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline35"
+        app:layout_constraintEnd_toStartOf="@+id/guideline37"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline36"
+        app:layout_constraintTop_toTopOf="@+id/guideline34"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/nomeEffrazione"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/ock"
+        android:textColor="#2b2b2b"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline92"
+        app:layout_constraintEnd_toStartOf="@+id/guideline89"
+        app:layout_constraintStart_toStartOf="@+id/guideline32"
+        app:layout_constraintTop_toTopOf="@+id/guideline91" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
