--- a/app/src/main/res/layout/activity_nuova_multa.xml
+++ b/app/src/main/res/layout/activity_nuova_multa.xml
@@ -572,7 +572,7 @@
         android:fontFamily="@font/ock"
         android:text="Break-ins List"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#2b2b2b"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline59"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
@@ -586,7 +586,7 @@
         android:fontFamily="@font/ock"
         android:text="Validate Fine"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#2b2b2b"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline58"
