--- a/app/src/main/res/layout/fragment_effrazioni.xml
+++ b/app/src/main/res/layout/fragment_effrazioni.xml
@@ -85,7 +85,7 @@
             android:fontFamily="@font/ock"
             android:text="Add Break-in"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#2b2b2b"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/guideline79"
@@ -124,7 +124,7 @@
                         android:fontFamily="@font/ock"
                         android:text="Add"
                         android:textAlignment="center"
-                        android:textColor="#000000"
+                        android:textColor="#2b2b2b"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:cornerRadius="20dp" />
